--- a/src/components/global.css
+++ b/src/components/global.css
@@ -1,3 +1,6 @@
+/* @import "./reset.css"; */
+@import "./typography.css";
+
 /* CSS Variables */
 :root {
   --color-black: #252323;
@@ -16,12 +19,15 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Manrope, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
-    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* font-family: "Manrope", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
+    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+  font-family: "Manrope";
   line-height: 1.6;
   font-weight: 500;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; 
+  text-rendering: optimizeLegibility;
 }
 
 .grid {
