--- a/src/components/card.module.css
+++ b/src/components/card.module.css
@@ -22,18 +22,61 @@
   perspective: 800px;
   backface-visibility: hidden;
   background: var(--color-pink);
-  height: 962px;  
+  height: 460px;  
   border-radius: 32px;
   transition: all 300ms ease-out;
-  /* cursor: none; */
-}
-
-/* Featured cards take up an entire row */
-.featured {
-  grid-column: span 2;
   display: flex;
   align-content: center;
   justify-content: center;
+  /* cursor: none; */
+}
+
+.featuredContent {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+.figure {
+  margin: auto;
+}
+
+.bottom {
+  margin: auto 0 0;
+}
+
+@media screen and (min-width: 600px) {
+  .card {
+    height: 540px; 
+  }
+
+  /* Featured cards take up an entire row */
+  .featured {
+    grid-column: span 2;
+  }
+}
+
+@media screen and (min-width: 960px) {
+  .card {
+    height: 660px; 
+  }
+
+  /* Featured cards take up an entire row */
+  .featured {
+    grid-column: span 2;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .card {
+    height: 800px; 
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .card {
+    height: 840px; 
+  }
 }
 
 .pink {
