--- a/src/components/aboutSection.module.css
+++ b/src/components/aboutSection.module.css
@@ -1,25 +1,44 @@
 .aboutSection {
-  padding: 360px 0 120px;
+  padding: 160px 0 160px;
   color: var(--color-black);
   grid-column-start: 1;
   grid-column-end: 13;
   display: flex;
-  flex-flow: row;
+  flex-flow: column-reverse;
+}
+
+@media screen and (min-width: 1200px) {
+  .aboutSection {
+    padding: 360px 0 120px;
+    flex-flow: row;
+  }
 }
 
 .title {
-  font-size: 36px;
+  margin-top: 20px;
+  font-size: 24px;
   line-height: 160%;
-  max-width: 680px;
   font-weight: 500;
 }
 
 .link {
   display: block;
   font-size: 20px;
-  margin-top: 60px;
+  margin-top: 40px;
   font-weight: 500;
   transition: color 200ms ease;
+}
+
+@media screen and (min-width: 960px) {
+  .title {
+    margin-top: 0;
+    font-size: 36px;
+    max-width: 680px;
+  }
+
+  .link {
+    margin-top: 60px;
+  }
 }
 
 .link:hover {
@@ -35,10 +54,18 @@
 }
 
 .videos {
-  align-self: flex-end;
-  margin-left: auto;
-  display: flex;
-  flex-flow: nowrap
+  align-self: center;
+  margin: 0 auto;
+  flex-flow: nowrap;
+  display: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .videos {
+    display: flex;
+    align-self: flex-end;
+    margin: 0 0 0 auto;
+  }
 }
 
 .videoColumn {
@@ -50,6 +77,13 @@
 .videoColumnFirst {
   margin-top: auto;
   margin-bottom: auto;
+  margin-left: 0;
+}
+
+@media screen and (min-width: 960px) {
+  .videoColumnFirst {
+    margin-left: 20px;
+  }
 }
 
 .videoColumn :nth-child(1) {
