--- a/src/components/project.css
+++ b/src/components/project.css
@@ -9,6 +9,16 @@
   overflow: hidden;
 }
 
+.project-hero-background {
+  top: 0;
+  left: 0;
+  content: '';
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+}
+
 .project-hero {
   display: flex;
   flex-flow: row;
@@ -20,6 +30,8 @@
 }
 
 .project-hero-image {
+  position: relative;
+  z-index: 10;
   margin: -80px auto 0;
   pointer-events: none;
 }
@@ -59,6 +71,14 @@
   grid-column-end: 13;
 }
 
+em {
+  font-weight: 600;
+}
+
+.body .paragraph {
+  font-size: 20px;
+}
+
 .project-title {
   font-weight: 600;
   font-size: 32px;
@@ -69,6 +89,16 @@
 .project-description {
   grid-column-start: 1;
   grid-column-end: 12;
+}
+
+.iframe-container {
+  position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;
+}
+
+.iframe-container iframe,
+.iframe-container emebd,
+.iframe-container object {
+  position: absolute; top: 0; left: 0; width: 100%; height: 100%;
 }
 
 figcaption {
@@ -130,6 +160,17 @@ figcaption {
 .details-wrapper {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
+}
+
+.case-list {
+  font-size: 20px;
+  list-style: disc;
+  margin-left: 20px;
+  margin-bottom: 40px;
+}
+
+.case-list li {
+  margin-bottom: 20px;
 }
 
 @media screen and (min-width: 960px) {
