--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  padding: 0 0 0;
+  padding: 20px 0 0;
   grid-column-start: 1;
   grid-column-end: 13;
 }
@@ -25,6 +25,10 @@
   font-size: 24px;
   line-height: 160%;
   font-weight: 500;
+}
+
+.contact a {
+  color: var(--color-blue);
 }
 
 .contact {
