--- a/src/components/global.css
+++ b/src/components/global.css
@@ -105,20 +105,20 @@ img {
 
 .h1 {
   font-size: 28px;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 1.6;
 }
 
 .h2 {
   margin-bottom: 24px;
   font-size: 24px;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 1.4;
 }
 
 .h3 {
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 700;
   margin-bottom: 20px;
 }
 
@@ -158,7 +158,8 @@ img {
   }
   
   .h2 {
-    font-size: 36px;
+    font-size: 42px;
+    margin-bottom: 40px;
   }
 
   .h3 {
