--- a/src/components/project.css
+++ b/src/components/project.css
@@ -54,6 +54,7 @@
   grid-template-columns: repeat(12, 1fr);
   grid-column-gap: 20px;
   grid-row-gap: 20px;
+  margin-bottom: 160px;
 }
 
 .image-2up {
@@ -161,6 +162,11 @@ figcaption {
 }
 
 @media screen and (min-width: 960px) {
+
+  .project-main {
+    margin-bottom: 320px;
+  }
+  
   .body {
     padding: 160px  0;
     grid-column-start: 4;
@@ -176,7 +182,7 @@ figcaption {
   }
 
   .project-hero-wrapper {
-    height: 720px;
+    height: 760px;
   }
 
   .project-hero-image {
@@ -221,6 +227,12 @@ figcaption {
 
   .case-list {
     font-size: 24px;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .project-hero-wrapper {
+    height: 920px;
   }
 }
 
