--- a/src/components/project.css
+++ b/src/components/project.css
@@ -21,7 +21,7 @@
 
 .project-hero {
   display: flex;
-  flex-flow: row;
+  flex-flow: column;
   align-content: center;
   justify-content: center;
   position: absolute;
@@ -32,7 +32,7 @@
 .project-hero-image {
   position: relative;
   z-index: 10;
-  margin: -80px auto 0;
+  margin: -30px auto 0;
   pointer-events: none;
 }
 
@@ -82,6 +82,7 @@
   background: var(--color-grey);
   border-radius: 24px;
   display: flex;
+  flex-flow: column;
   align-content: center;
   justify-content: center;
 }
