--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -27,19 +27,6 @@
   }
 }
 
-.titleWrapper {
-  overflow: hidden;
-  grid-column-start: 1;
-  grid-column-end: 13;
-}
-
-@media screen and (min-width: 960px) {
-  .titleWrapper {
-    grid-column-start: 1;
-    grid-column-end: 11;
-  }
-}
-
 .title {
   font-size: 28px;
   font-weight: 600;
@@ -59,21 +46,43 @@
   }
 }
 
+.titleWrapper {
+  overflow: hidden;
+  grid-column-start: 1;
+  grid-column-end: 13;
+  text-align: center;
+}
+
+@media screen and (min-width: 960px) {
+  .titleWrapper {
+    grid-column-start: 1;
+    grid-column-end: 11;
+    grid-column-end: 13;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .titleWrapper {
+    grid-column-start: 1;
     grid-column-end: 11;
+    grid-column-start: 2;
+    grid-column-end: 12;
   }
 }
 
 @media screen and (min-width: 1600px) {
   .titleWrapper {
     grid-column-end: 10;
+    grid-column-end: 13;
+    grid-column-start: 2;
+    grid-column-end: 12;
   }
 }
 
 @media screen and (min-width: 1800px) {
   .titleWrapper {
-    grid-column-end: 10;
+    /* grid-column-end: 10; */
+    grid-column-end: 12;
   }
 }
 
@@ -101,6 +110,8 @@
   .details {
     grid-column-start: 1;
     grid-column-end: 9;
+    grid-column-start: 3;
+    grid-column-end: 11;
   }
 }
 
@@ -108,6 +119,7 @@
   display: flex;
   flex-flow: row;
   justify-content: flex-start;
+  justify-content: center;
   align-content: center;
   overflow: hidden;
 }
