--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -76,28 +76,37 @@
   background: var(--color-white);
   border-radius: 32px;
   line-height: 24px;
+  cursor: pointer;
 }
 
 .menuLabel {
   margin: auto 0;
 }
 
-.icon {
+.figure {
   display: inline-block;
+  position: relative;
   margin-right: 12px;
   height: 24px;
   width: 24px;
 }
 
+.icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform-origin: center;
+}
+
 .fullNav {
   position: fixed;
-  z-index: 5;
+  z-index: 10;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
   padding-top: 0;
-  padding-right: 60px;
+  padding-right: 20px;
   display: flex;
   justify-content: center;
   align-content: flex-end;
@@ -128,20 +137,9 @@
   align-content: flex-start;
 }
 
-@media screen and (min-width: 960px) {
-  .half {
-    width: 50%;
-  }
-
-  .backdrop {
-    width: 50%;
-    display: block;
-  }
-}
-
 .wrapper {
   text-align: left;
-  padding-left: 60px;
+  padding-left: 20px;
   margin: auto auto auto 0;
 }
 
@@ -160,3 +158,31 @@
   margin-bottom: 16px;
   color: var(--color-pink-dark);
 }
+
+.socialIcons {
+  display: flex;
+  flex-flow: row;
+}
+
+.social {
+  margin-right: 24px;
+  /* background: var(--color-white);
+  padding: 8px;
+  border-radius: 32px; */
+}
+
+@media screen and (min-width: 960px) {
+  .half {
+    width: 50%;
+  }
+
+  .backdrop {
+    width: 50%;
+    display: block;
+  }
+
+  .wrapper {
+    padding-left: 60px;
+  }
+}
+
