--- a/src/components/global.css
+++ b/src/components/global.css
@@ -92,10 +92,12 @@ body {
 a {
   color: var(--color-black);
   text-decoration: none;
+  transition: color 150ms ease;
 }
 
 a:hover {
-  text-decoration: underline;
+  text-decoration: none;
+  color: var(--color-blue);
 }
 
 img {
@@ -158,7 +160,8 @@ img {
   }
   
   .h2 {
-    font-size: 42px;
+    /* font-size: 42px; */
+    font-size: 36px;
     margin-bottom: 40px;
   }
 
@@ -245,7 +248,7 @@ img {
 }
 
 .timeline {
-  margin-bottom: 6px;
+  margin-bottom: 0;
 }
 
 
