--- a/src/components/global.css
+++ b/src/components/global.css
@@ -162,7 +162,8 @@ img {
   .h2 {
     /* font-size: 42px; */
     font-size: 36px;
-    margin-bottom: 40px;
+    /* margin-bottom: 40px; */
+    margin-bottom: 24px;
   }
 
   .h3 {
