added meta info

--- a/src/components/project.css
+++ b/src/components/project.css
@@ -210,6 +210,7 @@ video {
 }
 
 .first-detail {
+  padding-top: 20px;
   grid-column-start: 1;
   grid-column-end: 12;
 }
@@ -281,6 +282,7 @@ video {
   }
 
   .first-detail {
+    padding-top: 0;
     grid-column-start: 2;
     grid-column-end: 5;
   }
