--- a/src/components/global.css
+++ b/src/components/global.css
@@ -28,6 +28,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; 
   text-rendering: optimizeLegibility;
+  box-sizing: border-box;
 }
 
 .grid {
