--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-flow: row;
   width: 100%;
-  padding: 12px 0 0;
+  padding: 12px 0 12px;
   grid-column-start: 1;
   grid-column-end: 13;
   font-size: 14px;
@@ -106,7 +106,6 @@
   margin-right: 12px;
   height: 24px;
   width: 24px;
-  top: 1px;
 }
 
 .icon {
